Closed Bug 84496 Opened 23 years ago Closed 23 years ago

Control does not fire TitleChange events

Categories

(Core Graveyard :: Embedding: ActiveX Wrapper, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla0.9.2

People

(Reporter: adamlock, Assigned: adamlock)

References

Details

Attachments

(2 files)

Control should fire TitleChange events when the document title changes
Tabbing is a bit screwed up in the patch but I'll fix that at checkin time.
Target Milestone: --- → mozilla0.9.2
r=ccarlen
One question: Has an NS_ENSURE_ARG check been done before we get to
CWebBrowserContainer? If not, I'd put that in.
Thanks Conrad. I'll put in the control's equivalent of NS_ENSURE_ARG_POINTER.
sr=blizzard
a= asa@mozilla.org for checkin to the trunk.
(on behalf of drivers)
Blocks: 83989
Fix checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: