Added code to fire TitleChange events. b=84496 r=ccarlen@netscape.com sr=blizzard@mozilla.org a=asa@mozilla.org