embedding/browser/activex/src/control/IOleCommandTargetImpl.h
@@ -224,7 +224,8 @@ public:
 			{
 				pCI->pfnCommandProc(pT, pCI->pCmdGUID, pCI->nCmdID, nCmdexecopt, pvaIn, pvaOut);
 			}
-			else if (pCI->nWindowsCmdID != 0)
+			else if (pCI->nWindowsCmdID != 0 &&
+                     !(nCmdexecopt & OLECMDEXECOPT_SHOWHELP))
 			{
 				HWND hwndTarget = pT->GetCommandTargetWindow();
 				if (hwndTarget)
