embedding/browser/activex/src/control/WebBrowserContainer.cpp
@@ -479,14 +479,31 @@ CWebBrowserContainer::SetFocus(void)
 NS_IMETHODIMP 
 CWebBrowserContainer::GetTitle(PRUnichar * *aTitle)
 {
-	return NS_ERROR_FAILURE;
+    NG_ASSERT_POINTER(aTitle, PRUnichar **);
+    if (!aTitle)
+        return E_INVALIDARG;
+
+    *aTitle = m_sTitle.ToNewUnicode();
+
+    return NS_OK;
 }
 
 
 NS_IMETHODIMP 
 CWebBrowserContainer::SetTitle(const PRUnichar * aTitle)
 {
-	return NS_ERROR_FAILURE;
+    NG_ASSERT_POINTER(aTitle, PRUnichar *);
+    if (!aTitle)
+        return E_INVALIDARG;
+
+    m_sTitle = aTitle;
+    // Fire a TitleChange event
+    BSTR bstrTitle = SysAllocString(aTitle);
+    m_pEvents1->Fire_TitleChange(bstrTitle);
+    m_pEvents2->Fire_TitleChange(bstrTitle);
+    SysFreeString(bstrTitle);
+
+    return NS_OK;
 }
 
 
